force-app/main/default/objects/SBQQ__Quote__c/fields/Amount_Approve__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Approve</label>
    <type>Checkbox</type>
</CustomField>