force-app/main/default/objects/SBQQ__Quote__c/fields/Amount_Director__c.field-meta.xml
<CustomField>
    <fullName>Amount_Director__c</fullName>
    <formula>IF(
AND(
OR( 
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;Asia&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;China&quot;)),
ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;),
SBQQ__NetAmount__c &gt; 0,
SBQQ__NetAmount__c &lt;= 7500000, Requires_approval_for_amount__c = True),TRUE,
IF(
AND(
OR(
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;Asia&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;China&quot;)),
ISPICKVAL(CurrencyIsoCode, &quot;CNY&quot;),
SBQQ__NetAmount__c / CURRENCYRATE(&apos;CNY&apos;) &gt; 0,
SBQQ__NetAmount__c / CURRENCYRATE(&apos;CNY&apos;) &lt;= 7500000,Requires_approval_for_amount__c = True), TRUE,
IF(
AND(
OR(
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;NAFTA&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;EMEAI&quot;)),
SBQQ__NetAmount__c &gt; 1000000,
SBQQ__NetAmount__c &lt;= 7500000),TRUE,FALSE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Director</label>
    <type>Checkbox</type>
</CustomField>