force-app/main/default/objects/SBQQ__Quote__c/fields/Amount_SD__c.field-meta.xml
<CustomField>
    <fullName>Amount_SD__c</fullName>
    <formula>IF(
AND(
OR(
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;EMEAI&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;NAFTA&quot;)),
SBQQ__NetAmount__c &gt; 7500000,
SBQQ__NetAmount__c &lt; 15000000, Requires_approval_for_amount__c = True),
TRUE,
IF(
AND(
OR(
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;Asia&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;China&quot;)),
ISPICKVAL(CurrencyIsoCode,	&quot;USD&quot;),
SBQQ__NetAmount__c &gt; 7500000,
SBQQ__NetAmount__c &lt; 15000000,Requires_approval_for_amount__c = True),
true,
IF(
AND(
OR(
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;Asia&quot;),
ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;China&quot;)),
ISPICKVAL(CurrencyIsoCode,	&quot;CNY&quot;),
SBQQ__NetAmount__c / CURRENCYRATE(&apos;CNY&apos;) &gt; 7500000,
SBQQ__NetAmount__c / CURRENCYRATE(&apos;CNY&apos;) &lt; 15000000,Requires_approval_for_amount__c = True),			
true, false)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Commercial VP</label>
    <type>Checkbox</type>
</CustomField>