force-app/main/default/objects/SBQQ__Quote__c/fields/Amount_VP__c.field-meta.xml
<CustomField>
    <fullName>Amount_VP__c</fullName>
    <formula>IF(
AND(
ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;),
SBQQ__NetAmount__c &gt; 15000000,
Requires_approval_for_amount__c = True),
TRUE,
IF(
AND(
ISPICKVAL(CurrencyIsoCode, &quot;CNY&quot;),
SBQQ__NetAmount__c / CURRENCYRATE(&apos;CNY&apos;) &gt; 15000000,
Requires_approval_for_amount__c = True),
TRUE, FALSE)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Executive VP</label>
    <type>Checkbox</type>
</CustomField>