force-app/main/default/objects/SBQQ__Quote__c/fields/Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Price__c</fullName>
    <formula>SBQQ__NetAmount__c /  SBQQ__Opportunity2__r.Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Amount divided by Opportunity Volume</inlineHelpText>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>