force-app/main/default/objects/SBQQ__Quote__c/fields/Base_Price_Goal_W2P_Volume_Adj_ExtraCo__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Goal_W2P_Volume_Adj_ExtraCo__c</fullName>
    <label>Base Price (+Goal*W2P+Volume Adj+ExtraCo</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>