force-app/main/default/objects/SBQQ__Quote__c/fields/Cliente_Industry__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Industry__c</fullName>
    <formula>TEXT(SBQQ__Account__r.A3__c)</formula>
    <label>Cliente Industry</label>
    <type>Text</type>
</CustomField>