force-app/main/default/objects/SBQQ__Quote__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>datevalue(CreatedDate)</formula>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>