force-app/main/default/objects/SBQQ__Quote__c/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <formula>IF(
CEILING( ( datevalue(CreatedDate) - DATE( YEAR(  datevalue(CreatedDate)  ), 1, 1) + 1) / 7) &gt; 52,
52,
CEILING( ( datevalue(CreatedDate) - DATE( YEAR( datevalue(CreatedDate )), 1, 1) + 1) / 7)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates de week of the year when the Quote was created. Used for calculations (interest rates and index prices)</inlineHelpText>
    <label>Created Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>