force-app/main/default/objects/SBQQ__Quote__c/fields/Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Created_Year__c</fullName>
    <formula>year(DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year in which the Quote was created. Used for index price and interest rates queries.</inlineHelpText>
    <label>Created Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>