force-app/main/default/objects/SBQQ__Quote__c/fields/Date_submit__c.field-meta.xml
<CustomField>
    <fullName>Date_submit__c</fullName>
    <inlineHelpText>Date of requesting approval</inlineHelpText>
    <label>Date submit</label>
    <type>Date</type>
</CustomField>