force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_Approve__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Approve</label>
    <type>Checkbox</type>
</CustomField>