force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <description>selecciona el conjunto de campos en Line Editor a mostrar.</description>
    <formula>IF(  ISPICKVAL(SBQQ__Opportunity2__r.Product__c, &apos;Iodine&apos;)  , &apos;Line_Editor_Iodine&apos;, 
  IF(  CONTAINS(SBQQ__PriceBook__r.Name, &apos;Fixed Price&apos;)  , &apos;Line_Editor_Fixed_Price&apos;, 

    CASE( text(SBQQ__Opportunity2__r.Market__c ),
      &apos;China&apos;, &apos;Line_Editor_China&apos; ,
      &apos;SBQQ__LineEditor&apos;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>