force-app/main/default/objects/SBQQ__Quote__c/fields/Extra_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extra_Cost__c</fullName>
    <formula>SBQQ__Opportunity2__r.Extra_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Extra Cost defined on the Opportunity</inlineHelpText>
    <label>Extra Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>