force-app/main/default/objects/SBQQ__Quote__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>Text( SBQQ__Opportunity2__r.Quality_Grade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade</label>
    <type>Text</type>
</CustomField>