force-app/main/default/objects/SBQQ__Quote__c/fields/Grade_Test__c.field-meta.xml
<CustomField>
    <fullName>Grade_Test__c</fullName>
    <formula>RIGHT(Index_Grade__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade Test</label>
    <type>Text</type>
</CustomField>