force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Opportunity2__r.Product__c, &apos;Iodine&apos;), &apos;Line_Editor_Iodine&apos;, &apos;SBQQ__LineEditor&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>