force-app/main/default/objects/SBQQ__Quote__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterms</valueSetName>
    </valueSet>
</CustomField>