force-app/main/default/objects/SBQQ__Quote__c/fields/Index_Grade__c.field-meta.xml
<CustomField>
    <fullName>Index_Grade__c</fullName>
    <label>Index Grade</label>
    <length>6</length>
    <type>Text</type>
</CustomField>