force-app/main/default/objects/SBQQ__Quote__c/fields/Index_Price__c.field-meta.xml
<CustomField>
    <fullName>Index_Price__c</fullName>
    <inlineHelpText>Prices per MT</inlineHelpText>
    <label>Index Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>