force-app/main/default/objects/SBQQ__Quote__c/fields/Index_Price_with_Quality_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Index_Price_with_Quality_Adjustment__c</fullName>
    <inlineHelpText>Price with quality adjustment</inlineHelpText>
    <label>Index Price with Quality Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>