force-app/main/default/objects/SBQQ__Quote__c/fields/Invalid_Price__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Price?</label>
    <type>Checkbox</type>
</CustomField>