force-app/main/default/objects/SBQQ__Quote__c/fields/LC_CIF_Adjust__c.field-meta.xml
<CustomField>
    <fullName>LC_CIF_Adjust__c</fullName>
    <defaultValue>-0.08</defaultValue>
    <label>LC CIF Adjust</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>