force-app/main/default/objects/SBQQ__Quote__c/fields/LC_CIP_Adjust__c.field-meta.xml
<CustomField>
    <fullName>LC_CIP_Adjust__c</fullName>
    <defaultValue>0.33333</defaultValue>
    <label>LC CIP Adjust</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>