force-app/main/default/objects/SBQQ__Quote__c/fields/LC_DAP_DDP_Adjust__c.field-meta.xml
<CustomField>
    <fullName>LC_DAP_DDP_Adjust__c</fullName>
    <defaultValue>0.16667</defaultValue>
    <label>LC DAP/DDP Adjust</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>