force-app/main/default/objects/SBQQ__Quote__c/fields/Level_of_approval__c.field-meta.xml
<CustomField>
    <fullName>Level_of_approval__c</fullName>
    <formula>IF(
OR(
Amount_VP__c = true,
OffSpec_Discount_VP__c = 1,
OnSpec_Discount_VP__c = 1),
&quot;Requires Executive VP Approval&quot;,
IF(
AND($UserRole.Name &lt;&gt; &quot;Director EMEAI &amp; Americas Lithium&quot;,
OR(
OffSpec_Discount_Director__c = 1, 
OnSpec_Discount_Director__c = 1, 
Amount_Director__c = true)),
&quot;Requires Director Approval&quot;, 
IF(
OR(
OffSpec_Discount_Senior_Director__c = 1,
OnSpec_Discount_Senior_Director__c = 1,
Amount_SD__c = true),
&quot;Requires Commercial VP Approval&quot;,
IF(
AND(
CreatedBy.Profile.Name = &quot;Sales &amp; Marketing Assistant&quot;,
SBQQ__NetAmount__c &gt; 0,
Requires_approval_for_amount__c = false),
&quot;Requires Sales Manager Approval&quot;, &quot;NO Requieres Approval&quot;))
)
)</formula>
    <label>Level of approval</label>
    <type>Text</type>
</CustomField>