force-app/main/default/objects/SBQQ__Quote__c/fields/LH_CIP_Adjust__c.field-meta.xml
<CustomField>
    <fullName>LH_CIP_Adjust__c</fullName>
    <defaultValue>0.43333</defaultValue>
    <label>LH CIP Adjust</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>