force-app/main/default/objects/SBQQ__Quote__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <inlineHelpText>Price: The quote was rejected without knowing the specific reason other than high price.   /    

Lost to competitor: The quote was rejected specifically because the costumer took a more competitive offer from a competitor.</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non Responsive</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>No Inventory Available</fullName>
            </value>
            <value>
                <fullName>Cost of Opportunity (another sale available with better conditions)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Change of Commercial Conditions</fullName>
            </value>
            <value>
                <fullName>No valid CCHEN</fullName>
            </value>
            <value>
                <fullName>Small Costumer</fullName>
                <isActive>false</isActive>
                <label>Small Costumer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>