force-app/main/default/objects/SBQQ__Quote__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>