force-app/main/default/objects/SBQQ__Quote__c/fields/OffSpec_Discount_Director__c.field-meta.xml
<CustomField>
    <fullName>OffSpec_Discount_Director__c</fullName>
    <label>OffSpec Discount Director</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountRate__c</field>
        <operation>greaterThan</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountRate__c</field>
        <operation>lessOrEqual</operation>
        <value>6</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Offspec__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>