force-app/main/default/objects/SBQQ__Quote__c/fields/OnSpec_Discount_VP__c.field-meta.xml
<CustomField>
    <fullName>OnSpec_Discount_VP__c</fullName>
    <label>OnSpec Discount Executive VP</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__TotalDiscountRate__c</field>
        <operation>greaterThan</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Offspec__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>