force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Grades__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grades__c</fullName>
    <label>Opportunity Grades</label>
    <type>TextArea</type>
</CustomField>