force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Grades_for_Search_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Grades_for_Search_Filter__c</fullName>
    <label>Opportunity Grades for Search Filter</label>
    <type>TextArea</type>
</CustomField>