force-app/main/default/objects/SBQQ__Quote__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>