force-app/main/default/objects/SBQQ__Quote__c/fields/Price_is_valid_until__c.field-meta.xml
<CustomField>
    <fullName>Price_is_valid_until__c</fullName>
    <formula>IF( AND(Type_of_Opportunity__c = &apos;Contract-Monthly/Quaterly/Semesterly&apos;,TODAY()&gt; DATEVALUE(&apos;2022-12-20&apos;)) , Created_Date__c + 21 , 

IF(AND(Type_of_Opportunity__c = &apos;Spot-&apos;,TODAY()&gt; DATEVALUE(&apos;2022-12-20&apos;)), Created_Date__c + 14,DATEVALUE(&apos;&apos;)) 
)</formula>
    <label>Price is valid until</label>
    <type>Date</type>
</CustomField>