force-app/main/default/objects/SBQQ__Quote__c/fields/Price_Product__c.field-meta.xml
<CustomField>
    <fullName>Price_Product__c</fullName>
    <formula>SBQQ__NetAmount__c /  SBQQ__Opportunity2__r.Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>