force-app/main/default/objects/SBQQ__Quote__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Product__c)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>