force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>Product_Grade__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Product__c)  &amp;&quot; &quot;&amp; TEXT(SBQQ__Opportunity2__r.Quality_Grade__c)</formula>
    <label>Product/Grade</label>
    <type>Text</type>
</CustomField>