force-app/main/default/objects/SBQQ__Quote__c/fields/Quality_Grade__c.field-meta.xml
<CustomField>
    <fullName>Quality_Grade__c</fullName>
    <description>Muestra quality grade de la oportunidad</description>
    <label>Quality/Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quality_Grade</valueSetName>
    </valueSet>
</CustomField>