force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Approve__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Approve</label>
    <type>Checkbox</type>
</CustomField>