force-app/main/default/objects/SBQQ__Quote__c/fields/QuoteProcessInputField__c.field-meta.xml
<CustomField>
    <fullName>QuoteProcessInputField__c</fullName>
    <description>se usa para input de Quote Process y automatizar seleccion de producto</description>
    <formula>CASE(text( SBQQ__Opportunity2__r.Product__c ), 

&apos;Lithium Carbonate&apos;, &apos;LC&apos;, 
&apos;Lithium hydroxide&apos;, &apos;LH&apos;,
&apos;ERR&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteProcessInputField</label>
    <type>Text</type>
</CustomField>