force-app/main/default/objects/SBQQ__Quote__c/fields/Requires_approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_approval__c</fullName>
    <formula>IF(
  OR(
    OffSpec_Discount_Director__c &gt; 0, 
    OffSpec_Discount_Manager__c &gt; 0,
    OffSpec_Discount_Senior_Director__c &gt; 0,
    OffSpec_Discount_VP__c &gt; 0,
    OnSpec_Discount_Director__c &gt; 0,
    OnSpec_Discount_Senior_Director__c &gt; 0,
    OnSpec_Discount_VP__c &gt; 0,
    Requires_approval_for_amount__c = true),
&quot;This quote requires approval&quot;, &quot;This quote does NOT require approval&quot;)</formula>
    <label>Requires approval</label>
    <type>Text</type>
</CustomField>