force-app/main/default/objects/SBQQ__Quote__c/fields/Requires_approval_for_amount__c.field-meta.xml
<CustomField>
    <fullName>Requires_approval_for_amount__c</fullName>
    <formula>IF(
  AND(
     OR(
        AND(ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;EMEAI&quot;),$UserRole.Name &lt;&gt; &quot;Director EMEAI &amp; Americas Lithium&quot;),
        ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;NAFTA&quot;)),
      SBQQ__NetAmount__c  &gt; 1000000
      ), true, 
       IF(
         AND(
            OR( ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;Asia&quot;),
                ISPICKVAL(SBQQ__Opportunity2__r.Market__c, &quot;China&quot;)),
               SBQQ__NetAmount__c  &gt; 0
             ), TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires approval for amount</label>
    <type>Checkbox</type>
</CustomField>