force-app/main/default/objects/SBQQ__Quote__c/fields/SelectedVolume__c.field-meta.xml
<CustomField>
    <fullName>SelectedVolume__c</fullName>
    <description>Sum of Volumen for the lines with field Selected value = true.
Used to validate lines selection</description>
    <label>SelectedVolume</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>