force-app/main/default/objects/SBQQ__Quote__c/fields/Small_Bag_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Small_Bag_Adjustment__c</fullName>
    <defaultValue>1.41667</defaultValue>
    <label>Small Bag Adjustment</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>