force-app/main/default/objects/SBQQ__Quote__c/fields/Type_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Opportunity__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Type_of_Negotiation__c)  &amp; &quot;-&quot;  &amp; TEXT(SBQQ__Opportunity2__r.Contract.Type_of_contract__c)</formula>
    <label>Type of Opportunity</label>
    <type>Text</type>
</CustomField>