force-app/main/default/objects/SBQQ__Quote__c/fields/validateVolume__c.field-meta.xml
<CustomField>
    <fullName>validateVolume__c</fullName>
    <formula>IF(SBQQ__PricebookId__c = $CustomMetadata.Pricebook_Id__mdt.Lithium_CPQ_Matrix.id__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>validateVolume</label>
    <type>Checkbox</type>
</CustomField>