force-app/main/default/objects/SBQQ__Quote__c/fields/Value_Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Value_Currency_Rate__c</fullName>
    <formula>CURRENCYRATE(&apos;CNY&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Currency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>