force-app/main/default/objects/SBQQ__Quote__c/fields/Value_Segmentation_CYN__c.field-meta.xml
<CustomField>
    <fullName>Value_Segmentation_CYN__c</fullName>
    <formula>1.436 * CURRENCYRATE(&apos;CNY&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Segmentation CYN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>