force-app/main/default/objects/SBQQ__Quote__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <formula>SBQQ__Opportunity2__r.Volume__c</formula>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>