force-app/main/default/objects/SBQQ__Quote__c/fields/Volume_Ajustment__c.field-meta.xml
<CustomField>
    <fullName>Volume_Ajustment__c</fullName>
    <label>Volume Adjustment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>