force-app/main/default/objects/SBQQ__Quote__c/fields/Volume_Selected__c.field-meta.xml
<CustomField>
    <fullName>Volume_Selected__c</fullName>
    <label>Volume Selected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>