force-app/main/default/objects/SBQQ__Quote__c/fields/W2P_Factor__c.field-meta.xml
<CustomField>
    <fullName>W2P_Factor__c</fullName>
    <label>W2P Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>