force-app/main/default/objects/SBQQ__Quote__c/validationRules/Cchen_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Cchen_Valid</fullName>
    <active>true</active>
    <description>Validates if a valid Cchen exists for the account.</description>
    <errorConditionFormula>And(
ISPICKVAL(SBQQ__Status__c, &apos;Accepted&apos;),	
CONTAINS(Owner:User.UserRole.Name, &apos;Lithium&apos;),
SBQQ__Account__r.Valid_Cchen__c = False)</errorConditionFormula>
    <errorMessage>This account still does not have a valid CCHEN Statement, please manage it in order to move forward with this quotation.</errorMessage>
</ValidationRule>