force-app/main/default/objects/SBQQ__Quote__c/validationRules/Not_allows_editing_quote_approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_allows_editing_quote_approved</fullName>
    <active>true</active>
    <description>Quote approved cannot be modified.</description>
    <errorConditionFormula>AND( $Profile.Name  &lt;&gt; &apos;System Administrator&apos;,
    Quote_Approve__c = True,
    ISCHANGED(SBQQ__NetAmount__c)
   )</errorConditionFormula>
    <errorMessage>The quote has already been approved and cannot be modified. If you want editing it, please request &quot;reject&quot; your quote.</errorMessage>
</ValidationRule>