force-app/main/default/objects/SBQQ__Quote__c/validationRules/Other_field_only_availabe_when_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_field_only_availabe_when_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Loss_Reason__c, &apos;Other&apos;)),
ISCHANGED(Other__c)						  
		)</errorConditionFormula>
    <errorDisplayField>Other__c</errorDisplayField>
    <errorMessage>Loss Reason must be &apos;Other&apos;</errorMessage>
</ValidationRule>