force-app/main/default/objects/SBQQ__Quote__c/validationRules/Quote_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Approval</fullName>
    <active>false</active>
    <errorConditionFormula>Quote_Approve__c = false  &amp;&amp; 
NOT(ISPICKVAL(SBQQ__Opportunity2__r.Contract.Type_of_contract__c, &quot;Formula&quot;)) &amp;&amp;
OR(ISPICKVAL(SBQQ__Status__c, &quot;Presented&quot;),
ISPICKVAL(SBQQ__Status__c, &quot;Accepted&quot;))</errorConditionFormula>
    <errorMessage>You cannot submit or accept a Quote without first requesting its approval.</errorMessage>
</ValidationRule>